--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+# Informacíon básica de microservicios
+spring.application.name=msvc-usuarios
+server.port=8001
+
+# Configuración de base de datos
+spring.datasource.url=jdbc:mysql://localhost:3306/msvc-usuarios?useSSL=false&useTimezone=true&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=Luisrenepb1
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configuración de JPA
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+
 
