--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8001
 # Configuración de base de datos
 spring.datasource.url=jdbc:mysql://localhost:3306/msvc-usuarios?useSSL=false&useTimezone=true&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=Luisrenepb1
+spring.datasource.password=passwordTest
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuración de JPA
